DesignProject/tests/error/test03.src
// undeclared variable
func calculate() -> integer {
    local a : integer;
    local result : integer;
    a := 10;
    result := a + b;
    return(result);
}



